syntax = "proto3";
option go_package = ".;pb";

// 股票基础信息（静态/半静态）
message StockIdentity {
  string Id = 1;                   //@go_tags(`gorm:"id;primaryKey;autoIncrement" json:"id"`) 主键ID
  string Symbol = 2;               //@go_tags(`gorm:"symbol;uniqueIndex:uk_market_symbol" json:"symbol"`) 股票代码
  string Market = 3;               //@go_tags(`gorm:"market;uniqueIndex:uk_market_symbol" json:"market"`) 市场标识(sh/sz)
  string Exchange = 4;             //@go_tags(`gorm:"exchange" json:"exchange"`) 交易所(SSE/SZSE)
  string Name = 5;                 //@go_tags(`gorm:"name" json:"name"`) 公司简称
  string FullName = 6;             //@go_tags(`gorm:"full_name" json:"full_name"`) 公司全称
  string ISIN = 7;                 //@go_tags(`gorm:"isin;index" json:"isin"`) 国际证券识别码
  string Industry = 8;             //@go_tags(`gorm:"industry" json:"industry"`) 行业
  string Sector = 9;               //@go_tags(`gorm:"sector" json:"sector"`) 板块
  string Area = 10;                //@go_tags(`gorm:"area" json:"area"`) 地区
  string Currency = 11;            //@go_tags(`gorm:"currency" json:"currency"`) 币种
  string ListDate = 12;            //@go_tags(`gorm:"list_date" json:"list_date"`) 上市日期(YYYYMMDD)
  string Status = 13;              //@go_tags(`gorm:"status" json:"status"`) 上市状态
  repeated string Aliases = 14;    //@go_tags(`gorm:"aliases;serializer:json" json:"aliases"`) 别名列表
  string CreateAt = 15;            //@go_tags(`gorm:"create_at" json:"create_at"`) 创建时间
  string UpdateAt = 16;            //@go_tags(`gorm:"update_at" json:"update_at"`) 更新时间
}

// 日/周/月K线（行情）
message StockBar {
  string Id = 1;                   //@go_tags(`gorm:"id;primaryKey;autoIncrement" json:"id"`) 主键ID
  string Symbol = 2;               //@go_tags(`gorm:"symbol;uniqueIndex:uk_symbol_tf_ts" json:"symbol"`) 股票代码
  string Market = 3;               //@go_tags(`gorm:"market;uniqueIndex:uk_symbol_tf_ts" json:"market"`) 市场标识
  string Timeframe = 4;            //@go_tags(`gorm:"timeframe;uniqueIndex:uk_symbol_tf_ts" json:"timeframe"`) 周期(1d/1w/1mo)
  string Ts = 5;                   //@go_tags(`gorm:"ts;uniqueIndex:uk_symbol_tf_ts" json:"ts"`) 时间戳(RFC3339)
  double Open = 6;                 //@go_tags(`gorm:"open" json:"open"`) 开盘价
  double High = 7;                 //@go_tags(`gorm:"high" json:"high"`) 最高价
  double Low = 8;                  //@go_tags(`gorm:"low" json:"low"`) 最低价
  double Close = 9;                //@go_tags(`gorm:"close" json:"close"`) 收盘价
  int64 Volume = 10;               //@go_tags(`gorm:"volume" json:"volume"`) 成交量(股)
  double Turnover = 11;            //@go_tags(`gorm:"turnover" json:"turnover"`) 成交额(货币)
  double AdjFactor = 12;           //@go_tags(`gorm:"adj_factor" json:"adj_factor"`) 复权因子
  string Source = 13;              //@go_tags(`gorm:"source" json:"source"`) 数据来源(akshare等)
  string CreateAt = 14;            //@go_tags(`gorm:"create_at" json:"create_at"`) 创建时间
  string UpdateAt = 15;            //@go_tags(`gorm:"update_at" json:"update_at"`) 更新时间
}

// 基本面快照（按期/按时间）
message FundamentalSnapshot {
  string Id = 1;                   //@go_tags(`gorm:"id;primaryKey;autoIncrement" json:"id"`) 主键ID
  string Symbol = 2;               //@go_tags(`gorm:"symbol;uniqueIndex:uk_symbol_ts" json:"symbol"`) 股票代码
  string Market = 3;               //@go_tags(`gorm:"market;uniqueIndex:uk_symbol_ts" json:"market"`) 市场标识
  string Ts = 4;                   //@go_tags(`gorm:"ts;uniqueIndex:uk_symbol_ts" json:"ts"`) 时间戳(RFC3339)
  string Period = 5;               //@go_tags(`gorm:"period" json:"period"`) 周期（如 FY/Q）
  string FiscalYear = 6;           //@go_tags(`gorm:"fiscal_year" json:"fiscal_year"`) 财年
  string FiscalQuarter = 7;        //@go_tags(`gorm:"fiscal_quarter" json:"fiscal_quarter"`) 财季
  string Source = 8;               //@go_tags(`gorm:"source" json:"source"`) 数据来源

  double Revenue = 20;             //@go_tags(`gorm:"revenue" json:"revenue"`) 营业收入
  double OperatingIncome = 21;     //@go_tags(`gorm:"operating_income" json:"operating_income"`) 营业利润
  double NetProfit = 22;           //@go_tags(`gorm:"net_profit" json:"net_profit"`) 净利润
  double EPS = 23;                 //@go_tags(`gorm:"eps" json:"eps"`) 每股收益
  double ROE = 24;                 //@go_tags(`gorm:"roe" json:"roe"`) 净资产收益率
  double ROA = 25;                 //@go_tags(`gorm:"roa" json:"roa"`) 总资产收益率
  double GrossMargin = 26;         //@go_tags(`gorm:"gross_margin" json:"gross_margin"`) 毛利率
  double OperatingMargin = 27;     //@go_tags(`gorm:"operating_margin" json:"operating_margin"`) 营业利润率
  double NetMargin = 28;           //@go_tags(`gorm:"net_margin" json:"net_margin"`) 净利率
  double PE = 29;                  //@go_tags(`gorm:"pe" json:"pe"`) 市盈率
  double PB = 30;                  //@go_tags(`gorm:"pb" json:"pb"`) 市净率
  double PS = 31;                  //@go_tags(`gorm:"ps" json:"ps"`) 市销率
  double DividendPerShare = 32;    //@go_tags(`gorm:"dividend_per_share" json:"dividend_per_share"`) 每股分红
  double DividendYield = 33;       //@go_tags(`gorm:"dividend_yield" json:"dividend_yield"`) 股息率
  double FreeCashFlow = 34;        //@go_tags(`gorm:"free_cash_flow" json:"free_cash_flow"`) 自由现金流
  double DebtToEquity = 35;        //@go_tags(`gorm:"debt_to_equity" json:"debt_to_equity"`) 资产负债比
  double CurrentRatio = 36;        //@go_tags(`gorm:"current_ratio" json:"current_ratio"`) 流动比率
  double QuickRatio = 37;          //@go_tags(`gorm:"quick_ratio" json:"quick_ratio"`) 速动比率
  double TotalAssets = 38;         //@go_tags(`gorm:"total_assets" json:"total_assets"`) 总资产
  double TotalLiabilities = 39;    //@go_tags(`gorm:"total_liabilities" json:"total_liabilities"`) 总负债
  double Equity = 40;              //@go_tags(`gorm:"equity" json:"equity"`) 股东权益
  double RevenueYoY = 41;          //@go_tags(`gorm:"revenue_yoy" json:"revenue_yoy"`) 收入同比
  double NetProfitYoY = 42;        //@go_tags(`gorm:"net_profit_yoy" json:"net_profit_yoy"`) 净利润同比
  double EPSYoY = 43;              //@go_tags(`gorm:"eps_yoy" json:"eps_yoy"`) EPS 同比

  map<string, double> Metrics = 60; //@go_tags(`gorm:"metrics;serializer:json" json:"metrics"`) 自定义扩展指标
  string CreateAt = 61;             //@go_tags(`gorm:"create_at" json:"create_at"`) 创建时间
}

